simple tooltip plugin

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <script type="text/javascript" src="tooltip.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
 
   <div class="tooltip tooltip1" data-tip="<strong>Sweet tootsie</strong> roll gingerbread oat cake. Pudding lemon drops cookie sweet roll. Sweet roll cupcake sugar plum tiramisu ice cream jelly. Cookie gummies gingerbread dessert donut.<br><br>Brownie carrot cake pastry danish gummies wafer dragée caramels. Liquorice chocolate bar tootsie roll.">TOOLTIP</div>
@@ -14,10 +13,8 @@
   <div class="tooltip tooltip2" data-tip-title="Caramels lemon drops" data-tip="Caramels lemon drops chocolate apple pie sugar plum dragée ice cream wafer liquorice. Marzipan icing tootsie roll liquorice candy canes donut tiramisu fruitcake. Tart ice cream caramels chocolate bar dragée icing cake caramels chupa chups.">TOOLTIP WITH TITLE</div>
 
   <script>
-    $('.tooltip1').tooltip({
-      'mode': 'bottom'
-    })
-    $('.tooltip2').tooltip()
+    $('.tooltip1').tooltip({'mode': 'bottom'});
+    $('.tooltip2').tooltip();
   </script>
 
 </body>
